lấy thông tin sự kiện theo ID
